fix(sonar): S6204 and S1128 in ExpenseAnalyticsService and EmbeddingService
- Replace Stream.collect(Collectors.toList()) with Stream.toList()
  in detectAnomalies and findByPerson (S6204)
- Remove unused import java.util.Arrays from EmbeddingService (S1128)